# text-to-cad

./: .env.example  .gitignore  README.md  architecture.md  benchmark_results.md  idea.md  main.py  progress.md  prompt.md  pyproject.toml  rules.md
backend/app/: cad_api_allowlist.json  code_generator.py  config.py  executor.py  feasibility_gate.py  generate_allowlist.py  guardrail.py  intent_extractor.py  main.py  schemas.py  vector_store.py  worker.py
backend/app/data/: few_shot_examples.json
benchmarking/: run_benchmarks.py
data/: few_shot_examples.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: StlViewer.jsx
tests/: demo_runs.py  sanity_check.py  test_api_guardrail.py  test_end_to_end.py  test_feasibility.py  test_generalization.py  test_iterative_editing.py  test_vector_store.py
