[project]
name = "text-to-cad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.8.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pint>=0.25.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
